# AI-Ticket-Triage-System

./: .gitignore  README.md  api.py  app.py  database.py  eval.py  pyproject.toml  requirements.txt  sample.env  sample_tickets.txt
.streamlit/: config.toml
